--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,22 @@ h6 {
 
 #carouselExampleCaptions {
     height: 550px;
+    background-color: #11dbcf;
+}
+
+@media screen and (max-width: 768px) {
+    #carouselExampleCaptions {
+        height: 250px;
+    }
+    .bg-packages {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sm-packages {
+        display: none;
+    }
 }
 
 .hero-title {
@@ -475,6 +491,12 @@ h6 {
     margin-top: 100px;
 }
 
+@media screen and (max-width: 480px) {
+    #hero .icon-boxes {
+        margin-top: -50px;
+    }
+}
+
 #hero .icon-box {
     padding: 50px 30px;
     position: relative;
@@ -553,7 +575,7 @@ h6 {
 --------------------------------------------------------------*/
 
 section {
-    padding: 80px 0;
+    padding: 40px 0;
     overflow: hidden;
 }
 
@@ -640,6 +662,12 @@ section {
     text-decoration: none;
 }
 
+@media screen and (max-width: 480px) {
+    .about .content .btn-learn-more {
+        margin: auto;
+    }
+}
+
 
 /*--------------------------------------------------------------
 # Counts
@@ -708,73 +736,6 @@ section {
 
 .about-video .content p:last-child {
     margin-bottom: 0;
-}
-
-.about-video .play-btn {
-    width: 94px;
-    height: 94px;
-    background: radial-gradient(#2487ce 50%, rgba(36, 135, 206, 0.4) 52%);
-    border-radius: 50%;
-    display: block;
-    position: absolute;
-    left: calc(50% - 47px);
-    top: calc(50% - 47px);
-    overflow: hidden;
-}
-
-.about-video .play-btn::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-40%) translateY(-50%);
-    width: 0;
-    height: 0;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    border-left: 15px solid #fff;
-    z-index: 100;
-    transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-.about-video .play-btn::before {
-    content: "";
-    position: absolute;
-    width: 120px;
-    height: 120px;
-    animation-delay: 0s;
-    animation: pulsate-btn 2s;
-    animation-direction: forwards;
-    animation-iteration-count: infinite;
-    animation-timing-function: steps;
-    opacity: 1;
-    border-radius: 50%;
-    border: 5px solid rgba(36, 135, 206, 0.7);
-    top: -15%;
-    left: -15%;
-    background: rgba(198, 16, 0, 0);
-}
-
-.about-video .play-btn:hover::after {
-    border-left: 15px solid #2487ce;
-    transform: scale(20);
-}
-
-.about-video .play-btn:hover::before {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-40%) translateY(-50%);
-    width: 0;
-    height: 0;
-    border: none;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    border-left: 15px solid #fff;
-    z-index: 200;
-    animation: none;
-    border-radius: 0;
 }
 
 @keyframes pulsate-btn {
